Purple Team Platform v6.0 - OpenVAS parity and beyond
Restructured codebase with modular architecture:
- lib/ for shared libraries, scanners/ for scan modules, utilities/ for orchestration
- SQLite evidence database with schema migration support
- Cross-platform support (Linux, Windows 11, WSL, macOS)

New capabilities:
- CISA KEV + EPSS threat intelligence enrichment
- Persistent asset inventory with risk profiling
- Delta reporting and trend analysis across scan sessions
- OpenVAS-compatible Quality of Detection (QoD) scoring
- Credentialed/authenticated scanning (SSH, WinRM, SNMP)
- False positive management with override rules
- OpenVAS/GVM integration (GMP, CLI, XML import)
- Windows 11 native support with cross-platform detection

24/38 security tools discovered, 10+ compliance frameworks,
human-like behavior simulation, USB portable deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,38 @@
-# Secrets & Credentials
-.env
-.env.*
-*.pem
-*.key
-secrets/
-credentials/
-config.local.yaml
-*-local.yaml
-
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-env/
-.venv/
-ENV/
+*.pyo
 *.egg-info/
+*.egg
 dist/
 build/
+
+# Virtual environment
+venv/
+.venv/
+
+# Data (runtime generated)
+data/evidence/
+data/results/
+data/logs/
+data/reports/
+data/archives/
+data/threat_intel/
+
+# Credentials (sensitive)
+config/credentials.yaml
+config/credentials.json
+config/active/credentials.yaml
+config/active/.cred_key
+*.key
+*.pem
+
+# OS
+.DS_Store
+Thumbs.db
 
 # IDE
 .vscode/
 .idea/
 *.swp
-
-# OS Files
-.DS_Store
-Thumbs.db
-
-# Logs & Output
-*.log
-logs/
-output/
-reports/
-
-# Assessment data (may contain sensitive info)
-assessments/
-findings/
-evidence/
-*.xlsx
-*.csv
-!templates/*.csv
+*.swo
