Airgapped operation: ship intel data with repo, standalone updater
- Track KEV catalog (1,507 entries), EPSS scores (3,326), and NVD cache
  (3,395 CVEs) in git so clones work offline immediately
- Fix threat_intel.py to always load cache even when stale - previously
  discarded expired cache, leaving airgapped systems with zero KEV/EPSS data
- Add bin/update-intel.py standalone updater for sneakernet workflows

--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,16 @@ build/
 venv/
 .venv/
 
-# Data (runtime generated)
+# Data (runtime generated - user-specific)
 data/evidence/
 data/results/
 data/logs/
 data/reports/
 data/archives/
-data/threat_intel/
+
+# Intel data IS tracked (for airgapped/offline operation)
+# data/threat_intel/ - KEV catalog, EPSS scores
+# data/vuln_db/      - NVD CVE cache
 
 # Credentials (sensitive)
 config/credentials.yaml
